# Agent

./: .gitignore  pyproject.toml
agent/: llm.py  node.py  workflow.py
test/: node_test.py  single_chat.py  workflow_test.py
tools/builtins/: __init__.py  bash.py  edit.py  find.py  grep.py  ls.py  read.py  search.py  tool_def.py  write.py
